# fine-tune

./: .gitignore
dataset/: likelihood.ipynb  pyproject.toml
dataset/fine-tune/: for_cohere.txt
dataset/semantic/: generate_embedings.py
dataset/tune/: convert_for_cohere.py  data_models.py  for_cohere.txt  generate_questions.py  lala.json
